--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    
+
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script>
@@ -35,7 +35,7 @@
     <div class="navbar-fixed">
       <nav class="deep-purple lighten-2">
             <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Enfoca Studio</a>
+            <a href="#" class="brand-logo center">Enfoca Est.</a>
             <a href="#" data-target="menu-responsive" class="sidenav-trigger">
             <i class="material-icons">menu</i>
             </a>
