--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enfoca Studio</title>
+    <title>Enfoca Foto</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -35,7 +35,7 @@
     <div class="navbar-fixed">
       <nav class="deep-purple lighten-2">
             <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Enfoca Est.</a>
+            <a href="#" class="brand-logo center">Enfoca Foto</a>
             <a href="#" data-target="menu-responsive" class="sidenav-trigger">
             <i class="material-icons">menu</i>
             </a>
