cambio direccion menu

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enfoca Foto</title>
+    <title>Enfoca Fotos</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -35,12 +35,12 @@
     <div class="navbar-fixed">
       <nav class="deep-purple lighten-2">
             <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Enfoca Foto</a>
+            <a href="#" class="brand-logo center">Enfoca Fotos</a>
             <a href="#" data-target="menu-responsive" class="sidenav-trigger">
             <i class="material-icons">menu</i>
             </a>
     
-            <ul class="left  hide-on-med-and-down">
+            <ul class="right  hide-on-med-and-down">
               <li><a href="#sobremi">Sobre Mi</a></li>
               <li><a href="#clientes">Con quienes he trabajado</a></li>
               <li><a href="#portafolio">Portafolio</a></li>
